lab1/Test/L1-A-0-25.output
Error Type A at Line 1
Error Type A at Line 21
Error Type A at Line 32
Error Type A at Line 33
